<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:layout_marginBottom="?attr/actionBarSize"
    android:layout_marginTop="?attr/actionBarSize"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.teammike.iptk.foursquare.activities.RegisterActivity">

    <EditText
        android:id="@+id/edit_profile_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_email"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:singleLine="true" />

    <EditText
        android:id="@+id/edit_profile_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_username"
        android:inputType="text"
        android:maxLines="1"
        android:singleLine="true" />

    <EditText
        android:id="@+id/edit_profile_first_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_first_name"
        android:inputType="text"
        android:maxLines="1"
        android:singleLine="true" />

    <EditText
        android:id="@+id/edit_profile_last_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_last_name"
        android:inputType="text"
        android:maxLines="1"
        android:singleLine="true" />

    <EditText
        android:id="@+id/edit_profile_age"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_age"
        android:inputType="number"
        android:maxLines="1"
        android:singleLine="true" />

    <EditText
        android:id="@+id/edit_profile_domicile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_domicile"
        android:inputType="text"
        android:maxLines="1"
        android:singleLine="true" />

    <Button
        android:id="@+id/edit_profile_button"
        style="?android:textAppearanceSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/action_edit" />

</LinearLayout>