<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/reset_password_form"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:orientation="vertical"
    android:layout_marginBottom="?attr/actionBarSize"
    android:layout_marginTop="?attr/actionBarSize"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.teammike.iptk.foursquare.activities.RegisterActivity">

    <EditText
        android:id="@+id/text_reset_password_new"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_new_password"
        android:inputType="textPassword"
        android:maxLines="1"
        android:singleLine="true" />

    <EditText
        android:id="@+id/text_reset_password_new_confirmed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_new_password_confirm"
        android:inputType="textPassword"
        android:maxLines="1"
        android:singleLine="true" />


    <Button
        android:id="@+id/reset_password_profile_button"
        style="?android:textAppearanceSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/action_reset" />
</LinearLayout>