<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_marginTop="?attr/actionBarSize"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:layout_marginBottom="?attr/actionBarSize"
    android:layout_height="match_parent">

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/friendship_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_add_black_24dp"
        android:layout_gravity="end"/>

    <ImageView
        android:id="@+id/profile_picture_button"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:scaleType="fitXY"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/info_profile_image_content_description"
        android:background="@drawable/round_image_view"
        android:layout_marginTop="50dp"
        app:srcCompat="@drawable/ic_sentiment_satisfied_black_24dp" />

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_gravity="center_horizontal">

        <TextView
            android:id="@+id/text_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="0"
            android:textSize="18sp"
            android:layout_marginEnd="@dimen/activity_vertical_margin"
            android:text="@string/username" />

        <TextView
            android:id="@+id/profile_username_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="1"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/text_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="0"
            android:textSize="18sp"
            android:layout_marginEnd="@dimen/activity_vertical_margin"
            android:layout_gravity="end"
            android:text="@string/email" />

        <TextView
            android:id="@+id/profile_email_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="1"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/text_realname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="0"
            android:textSize="18sp"
            android:text="@string/fullname" />

        <TextView
            android:id="@+id/profile_realname_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="1"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/text_age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="3"
            android:layout_column="0"
            android:textSize="18sp"
            android:layout_marginEnd="@dimen/activity_vertical_margin"
            android:layout_gravity="end"
            android:text="@string/age" />

        <TextView
            android:id="@+id/profile_age_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="3"
            android:layout_column="1"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/text_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="4"
            android:layout_column="0"
            android:textSize="18sp"
            android:layout_marginEnd="@dimen/activity_vertical_margin"
            android:layout_gravity="end"
            android:text="@string/location" />

        <TextView
            android:id="@+id/profile_domicile_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="4"
            android:layout_column="1"
            android:textSize="18sp" />

    </GridLayout>

</LinearLayout>